infra/k8s/card-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: card-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: card
  template:
    metadata:
      labels:
        app: card
    spec:
      containers:
        - name: card
          image: tooyoung123/card
          
---

apiVersion: v1
kind: Service
metadata:
  name: card-srv
spec:
  selector:
    app: card
  ports:
    - name: card
      protocol: TCP
      port: 3000
      targetPort: 3000
