infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules: 
    - host: card.dev
      http:
        paths:
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: card-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service: 
                name: client-srv
                port:
                  number: 3000
